# Alcubierre

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  alcubierre  credits.txt  imgui.ini
lib/src/glad/include/glad/: glad.h
lib/src/glad/src/: glad.c
lib/src/glfw-3.3/: cmake_uninstall.cmake
lib/src/glfw-3.3-stable/: cmake_uninstall.cmake
lib/src/glfw-3.3.2/: cmake_uninstall.cmake
lib/src/glfw-3.3.2/src/: glfw3.pc
lib/src/glfw-3.3/src/: glfw3.pc
lib/src/imgui/: imgui_demo.cpp  imgui_impl_opengl3.cpp
lib/src/mio/: DartConfiguration.tcl
output/runtime/assets/: settings.json  standard.fshad  standard.vshad  texture.fshad  texture.vshad
output/runtime/debug/: .ninja_deps  .ninja_log  build.ninja  glad.lib  imgui.lib  lz4.lib  rules.ninja
output/runtime/debug/.cmake/api/v1/reply/: cache-v2-f7b3af2a053558d92f4e.json  cmakeFiles-v1-f86a5b6993d31f567055.json  codemodel-v2-419c5554bd8c04a335cd.json  index-2020-02-18T13-59-36-0508.json  target-Continuous-Debug-79706cc728dd349d2827.json  target-ContinuousBuild-Debug-df741872999d7fb3f0d4.json  target-ContinuousConfigure-Debug-65ead946c3388ff33f52.json  target-ContinuousCoverage-Debug-0cfba968020492f9c7cb.json  target-ContinuousMemCheck-Debug-81c474c9345b3d4fde15.json  target-ContinuousStart-Debug-77a6e561d3c93df28bf7.json  target-ContinuousSubmit-Debug-814efa5fbdcf7874af0f.json  target-ContinuousTest-Debug-3d8b2a0d00845ba241cf.json  target-ContinuousUpdate-Debug-f66954d243b8a6772c05.json  target-Experimental-Debug-42c08e77c6e3660d249d.json  target-ExperimentalBuild-Debug-33d7b275bb75439ffb6b.json  target-ExperimentalConfigure-Debug-4e46c5454531b19c3fab.json  target-ExperimentalCoverage-Debug-0033f1762becd0092731.json  target-ExperimentalMemCheck-Debug-f22bf42ef4bab9729ecf.json  target-ExperimentalStart-Debug-6de9a87c53abc5042fce.json  target-ExperimentalSubmit-Debug-2dfc1847bc78fa847c04.json  target-ExperimentalTest-Debug-2d76b3ff6850451f3f36.json  target-ExperimentalUpdate-Debug-4d881ff9fc5378aee16f.json  target-Nightly-Debug-4cad28b79c864f70b026.json  target-NightlyBuild-Debug-645459a5fe06a60f7aac.json  target-NightlyConfigure-Debug-f144910006c6c75cde4a.json  target-NightlyCoverage-Debug-364f47da1362056ba6e5.json  target-NightlyMemCheck-Debug-1ce796f1c663c7c725c4.json  target-NightlyMemoryCheck-Debug-04fc2bff87fe2469404f.json  target-NightlyStart-Debug-fbab3ae676d61594a9fa.json  target-NightlySubmit-Debug-7cf226f68758e2838342.json  target-NightlyTest-Debug-9193b74cd5c14bfd372b.json  target-NightlyUpdate-Debug-a87b355e22ed32803577.json  target-alcubierre-Debug-ef32fb2afcb180cd7b31.json  target-glad-Debug-e7ee7a02cd542205410a.json  target-imgui-Debug-e8bb63c874f0d083023e.json  target-lz4-Debug-51fcdf5a9259b7da5b1b.json
output/runtime/debug/lib/src/mio/: DartConfiguration.tcl  mio-config.cmake
src/: config.h.in  main.cpp  main.h
src/Alcubierre/: Alcubierre.cpp  Alcubierre.h  Engine.cpp  Engine.h  StateManager.h  build_info.h  build_info.h.in
src/Alcubierre/Debug/: Log.h
src/Alcubierre/Debug/Tripwire/: tripwire.cpp  tripwire.h
src/Alcubierre/Engine/: Engine.cpp  Engine.h  Engine_types.h
src/Alcubierre/Libraries/: Window.cpp  Window.h
src/Alcubierre/Libraries/Debug/: Debug_interface.cpp  Debug_interface.h  ImGui_Handler.cpp  ImGui_Handler.h  Metrics.cpp  Metrics.h  Output.h
src/Alcubierre/Libraries/Render/: RenderManager.cpp  RenderManager.h  Renderer.h  Shader.h
src/Alcubierre/Libraries/Render/Window/: WindowManager.cpp  WindowManager.h
src/Alcubierre/Libraries/Utilities/: file.h
src/Alcubierre/Tests/: Demos.cpp  TestProgram_handler.cpp  TestProgram_handler.h
src/DevGame/: DevGame.cpp  DevGame.h  testmain.cpp
src/alcubierre/: Alcubierre.cpp  Alcubierre.h  imgui-handler.cpp
src/alcubierre/forensics/: Debug.cpp  Logging.cpp  Logging.h  performance.cpp
src/alcubierre/libraries/debug/: Console.cpp  Console.h  ImGui_Handler.cpp  ImGui_Handler.h
src/alcubierre/libraries/image/: Image_Library.cpp
src/alcubierre/libraries/io/: FileIO.cpp  FileIO.h
src/alcubierre/libraries/render/: RenderManager.cpp  RenderManager.h  WindowManager.cpp  WindowManager.h
src/alcubierre/libraries/settings/: Settings.cpp  Settings.h
src/alcubierre/settings/: base_settings.cpp  entry_settings.cpp  general_settings.cpp  settingComponent.cpp  settingComponent.h  settings_manager.cpp
src/alcubierre/settings/serialization/: settingComponentSerializer.cpp
src/cppc/game/: cppc.cpp
src/cppc/libraries/: resource_lib.cpp  resource_lib.h
src/cppc/render/: render_manager.cpp  shader_loader.cpp  window_manager.cpp
src/cppc/render/image/: ImageLibrary.cpp
src/cppc/render/primitives/: PrimitiveLibrary.cpp
src/cppc/render/text/: FontLib.cpp  FontLibrary.cpp
src/cppc/resources/: asset_manager.cpp  asset_manager.h
src/cppc/util/: ColorLib.cpp
